# adulib

./: CHANGELOG.md  README.md  index.html  nblite.toml  publish_new_version.sh  pyproject.toml  search.json  settings.ini  update_docs.sh
adulib/: _modidx.py  asynchronous.py  llm.py  nb.py  reflection.py  rest.py
api/: asynchronous.html  caching.html  config.html  git.html  reflection.html  rest.html
api/algos/: 00_str_matching.html  01_smart_dedup.html
api/cli/: 00_base.html  01_data_questionnaire.html
api/llm/: 00_base.html  01_rate_limits.html  02_call_logging.html  03_caching.html  04_internal_utils.html  05_tokens.html  06_completions.html  07_text_completions.html  08_embeddings.html
api/utils/: 00_base.html  01_daemon.html  02_pipes.html  03_wrangle.html
docs/: index.html  search.json
docs/api/: asynchronous.html  caching.html  git.html  reflection.html  rest.html  utils.html
docs/api/algos/: 00_str_matching.html  01_smart_dedup.html
docs/api/cli/: 00_base.html  01_data_questionnaire.html
docs/api/llm/: 00_base.html  01_rate_limits.html  02_call_logging.html  03_caching.html  04_internal_utils.html  05_tokens.html  06_completions.html  08_embeddings.html  (+1 more)
nbs/: index.ipynb  nbdev.yml
nbs/api/: asynchronous.ipynb  caching.ipynb  cli.ipynb  config.ipynb  git.ipynb  llm.ipynb  nb.ipynb  reflection.ipynb  rest.ipynb  utils.ipynb
nbs/src/: asynchronous.ipynb  llm.ipynb  nb.ipynb  reflection.ipynb  rest.ipynb
pts/: index.pct.py
pts/api/: asynchronous.pct.py  caching.pct.py  cli.pct.py  config.pct.py  git.pct.py  llm.pct.py  nb.pct.py  reflection.pct.py  rest.pct.py  utils.pct.py
(+38 files in other folders)
