[project]
name = "adulib"
version = "0.0.1"
description = "Tools and utilities developed by the Autonomy Data Unit (ADU)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "Lukas Kikuchi", email = "lukas.kikuchi@gmail.com" }
]

[project.optional-dependencies]
rest = [
    "aiohttp>=3.11.12",
    "asynciolimiter>=1.0.0",
    "diskcache>=5.6.3",
]
llm = [
    "asynciolimiter>=1.0.0",
    "openai>=1.63.0",
    "tiktoken>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "nbdev>=2.3.34",
    "pydantic>=2.10.6",
]
