[project]
name = "adulib"
description = "Tools and utilities developed by the Autonomy Data Unit (ADU)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "Lukas Kikuchi", email = "lukas.kikuchi@gmail.com" }
]
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"  # Use hatch-vcs for Git-based versioning

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build" 

[project.optional-dependencies]
rest = [
    "aiohttp>=3.11.12",
    "asynciolimiter>=1.0.0",
    "diskcache>=5.6.3",
]
llm = [
    "asynciolimiter>=1.0.0",
    "openai>=1.63.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "git-cliff>=2.8.0",
    "hatch-vcs>=0.4.0",
    "jupyterlab>=4.3.5",
    "nbdev>=2.3.34",
    "pydantic>=2.10.6",
    "setuptools-scm>=8.1.0",
    "twine>=6.1.0",
]
